kubernetes/dev/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: skillup_api
        imagePullPolicy: Never # images are built locally
        command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /app
          name: app-code-colume
      volumes:
      - name: app-code-colume
        hostPath:
          path: /app/api
          type: Directory
