kubernetes/dev/api_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: api
  type: NodePort
  #type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
