kubernetes/dev/front_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: front-service
spec:
  selector:
    app: front
  type: NodePort
  #type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
