kubernetes/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-skillup
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: api-service
    servicePort: 80
  rules:
  - host: kb-skillup.local
    http:
      paths:
      - path: /
        backend:
          serviceName: api-service
          servicePort: 80
